test/sema/typeck/literal/unary-minus-byte-3.dora
const m1: UInt8 = -1i32;
